add titan client

--- a/config.toml
+++ b/config.toml
@@ -8,3 +8,8 @@ HUB_URL ="UBI-TASK-BASE-URL"
 TASK_URL=""
 CHECK_INTERVAL=1
 BATCH_NUM=1
+ENABLE_TITAN=1
+TITAN_KEY=""
+TITAN_FOLDER_512=607
+TITAN_FOLDER_32=608
+
